syntax = "proto3";

package proto.keeper.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Sadere/gophkeeper/pkg/keeper/v1";

enum SecretType {
  SECRET_TYPE_UNSPECIFIED = 0;
  SECRET_TYPE_CREDENTIAL = 1;
  SECRET_TYPE_TEXT = 2;
  SECRET_TYPE_BLOB = 3;
  SECRET_TYPE_CARD = 4;
}

message Secret {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string metadata = 4;
  SecretType type = 5;
  oneof content {
    Credential credential = 6;
    Text text = 7;
    Blob blob = 8;
    Card card = 9;
  }
}

message Credential {
  string login = 1 [
    (buf.validate.field).string.min_len = 5,
    (buf.validate.field).string.max_len = 100
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 5,
    (buf.validate.field).string.max_len = 100
  ];
}

message Text {
  string text = 1 [(buf.validate.field).string.min_len = 1];
}

message Blob {
  string file_name = 1 [(buf.validate.field).string.min_len = 1];
  bool is_done = 2;
}

message Card {
  string number = 1 [
    (buf.validate.field).string.min_len = 8,
    (buf.validate.field).string.max_len = 19
  ];
  uint32 exp_year = 2 [(buf.validate.field).uint32 = {
    gt: 1
    lte: 99
  }];
  uint32 exp_month = 3 [(buf.validate.field).uint32 = {
    gt: 1
    lte: 12
  }];
  uint32 cvv = 4 [(buf.validate.field).uint32 = {
    gt: 100
    lte: 999
  }];
}

enum PreviewType {
  PREVIEW_TYPE_UNSPECIFIED = 0;
  PREVIEW_TYPE_NEW = 1;
  PREVIEW_TYPE_UPDATED = 2;
}

message SecretPreview {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string metadata = 4;
  SecretType type = 5;
}

message SecretPreviewsResponseV1 {
  repeated SecretPreview previews = 1;
}

message SaveUserSecretRequestV1 {
  string master_password = 1 [(buf.validate.field).string.min_len = 1];
  Secret secret = 2;
}

message GetUserSecretRequestV1 {
  string master_password = 1 [(buf.validate.field).string.min_len = 1];
  uint64 id = 2;
}

message GetUserSecretResponseV1 {
  Secret secret = 1;
}

message UploadFileRequestV1 {
  string metadata = 1;
  string file_name = 2;
  string master_password = 3;
  bytes chunk = 4;
}

message DownloadFileRequestV1 {
  string master_password = 1 [(buf.validate.field).string.min_len = 1];
  uint64 id = 2;
}

message DownloadFileResponseV1 {
  bytes chunk = 1;
}

service SecretsService {
  rpc SecretPreviewsV1(google.protobuf.Empty) returns (SecretPreviewsResponseV1);
  rpc SaveUserSecretV1(SaveUserSecretRequestV1) returns (google.protobuf.Empty);
  rpc GetUserSecretV1(GetUserSecretRequestV1) returns (GetUserSecretResponseV1);
  rpc UploadFileV1(stream UploadFileRequestV1) returns (google.protobuf.Empty);
  rpc DownloadFileV1(DownloadFileRequestV1) returns (stream DownloadFileResponseV1);
}
